# frame_with_orm

./: .env  Cargo.toml  rust.sqlite
migrations/2023-12-09-225715_create_users/: up.sql
migrations/2024-02-15-090256_create_rooms/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/auth/: login.rs  mod.rs  register.rs
src/models/: room.rs  user.rs
src/services/: greet.rs  greetest.rs  mod.rs  send.rs
