[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-jwt-auth-middleware = "0.3.0"
jsonwebtoken = "8.1.1"
jwt-compact = "0.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = [] }
diesel = { version = "2.1", features = ["sqlite"] }
dotenvy = "0.15"
bcrypt = "0.15.0"